# flask-template

./: .editorconfig  .flake8  .flaskenv  .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  pyproject.toml  shell.nix  tasks.py
docs/: cli.rst  conf.py  index.rst  make.bat  requirements.txt
flask_template/: __init__.py  babel.py  licenses.py
flask_template/api/: __init__.py  jwt.py  util.py
flask_template/api/v1_api/: __init__.py  auth.py  root.py
flask_template/api/v1_api/models/: __init__.py  auth.py  root.py
flask_template/db/: __init__.py  cli.py  db.py
flask_template/db/models/: __init__.py  example.py
flask_template/static/: licenses.css
flask_template/templates/: included_licenses.html  licenses.html
flask_template/util/: logging.py  reverse_proxy_fix.py
flask_template/util/config/: __init__.py  smorest_config.py  sqlalchemy_config.py
flask_template/util/debug_routes/: __init__.py  root.py  routes.py
flask_template/util/debug_routes/templates/debug/: index.html
flask_template/util/debug_routes/templates/debug/routes/: all.html
migrations/: env.py
migrations/versions/: .gitkeep
translations/en/LC_MESSAGES/: messages.po
typings/apispec/: __init__.pyi  core.pyi  exceptions.pyi  plugin.pyi  utils.pyi  yaml_utils.pyi
typings/flask_babel/: __init__.pyi  speaklater.pyi
typings/flask_jwt_extended/: __init__.pyi  config.pyi  default_callbacks.pyi  exceptions.pyi  jwt_manager.pyi  tokens.pyi  utils.pyi  view_decorators.pyi
typings/flask_smorest/: __init__.pyi  arguments.pyi  blueprint.pyi  error_handler.pyi  etag.pyi  exceptions.pyi  fields.pyi  pagination.pyi  response.pyi  utils.pyi
typings/flask_smorest/spec/: __init__.pyi  field_converters.pyi  plugins.pyi
typings/flask_sqlalchemy/: __init__.pyi  _compat.pyi  model.pyi  utils.pyi
