[tool.poetry]
name = "flask_template"
version = "0.4.1"
description = "A template for Flask applications with SQLalchemy, Migrations and REST API"
authors = ["Fabian Bühler"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.18"
flask = { extras = ["dotenv"], version = "^3.0.0" }
Flask-JWT-Extended = "^4.6.0"
Flask-Cors = "^4.0.0"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.23"
Flask-Migrate = "^4.0.5"
flask-babel = "^4.0.0"
flask-smorest = "^0.42.3"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
# use key "tool.poetry.dev-dependencies" if you have to support poetry < 1.2!
black = "^23.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.12.2"
Sphinx = "^7.2.6"
sphinx-click = "^5.1.0"
myst-parser = "^2.0.0"
invoke = "^2.2.0"
pip-licenses = "^4.3.3"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py39"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2023
# theme = "sphinx_rtd_theme"  # theme must be added to the requirements first!
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
