[tool.poetry]
name = "flask_template"
version = "0.5.1"
description = "A template for Flask applications with SQLalchemy, Migrations and REST API"
authors = ["Fabian Bühler"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = { extras = ["dotenv"], version = "^3.1.3" }
Flask-JWT-Extended = "^4.7.4"
Flask-Cors = "^6.0.5"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.51"
Flask-Migrate = "^4.1.0"
flask-babel = "^4.0.0"
flask-smorest = "^0.47.0"
tomli = "^2.4.1"

[tool.poetry.group.dev.dependencies]
# use key "tool.poetry.dev-dependencies" if you have to support poetry < 1.2!
black = "^26.5.1"
flake8 = "^7.3.0"
pytest = "^9.1.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^25.11.29"
Sphinx = "^9.1.0"
sphinx-click = "^6.2.0"
myst-parser = "^5.1.0"
invoke = "^3.0.3"
pip-licenses-cli = { extras = ["spdx"], version = "^4.1.0" }
sphinxcontrib-redoc = "^1.6.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py312"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2023
# theme = "sphinx_rtd_theme"  # theme must be added to the requirements first!
enable-autodoc = true
enable-autosectionlabel = false
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/configuration.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    "alert",
    #"amsmath",
    #"attrs_inline",
    "colon_fence",
    "deflist",
    "dollarmath",
    #"fieldlist",
    "gfm_autolink",    # similar to linkify, but without extra requirements
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    #"strikethrough",
    "substitution",
    "tasklist",
]
# colon_fence_exact_match = true
# enable_checkboxes = true
# strikethrough_single_tilde = true
# substitutions = {"key": "substitution value"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
